--- a/rust/stackabled/Cargo.toml
+++ b/rust/stackabled/Cargo.toml
@@ -12,7 +12,7 @@ ui = ["dep:stackabled-web"]
 utoipa-swagger-ui = { workspace = true, features = ["axum"] }
 axum = { workspace = true, features = ["http2", "headers"] }
 utoipa = { workspace = true, features = ["axum_extras"] }
-stackable = { path = "../../", features = ["openapi"] }
+stackable = { path = "../stackable", features = ["openapi"] }
 clap = { workspace = true, features = ["env"] }
 tracing = { workspace = true }
 snafu = { workspace = true }
