--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -11,7 +11,7 @@ lazy_static = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 indexmap = { workspace = true }
-stackable = { path = "../../" }
+stackable = { path = "../stackable" }
 dotenvy = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
