Start transition to `thiserror`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ async-trait = "0.1.68"
 lazy_static = "1.4.0"
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
+thiserror = "1.0.44"
 indicatif = "0.17.5"
 dotenvy = "0.15.7"
 tracing = "0.1.37"
