--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -2,6 +2,7 @@
 name = "stackable-cockpit-web"
 version.workspace = true
 edition = "2021"
+publish = false
 
 [dependencies]
 phf = { workspace = true }
