--- a/rust/xtask/Cargo.toml
+++ b/rust/xtask/Cargo.toml
@@ -2,6 +2,7 @@
 name = "xtask"
 version.workspace = true
 edition = "2021"
+publish = false
 
 [dependencies]
 stackablectl = { path = "../stackablectl" }
