feat!: add transfer and caching layer (#47)
* Add xfer module

* Continue transfer layer

* Use TransferClient across application

* Adjust errors

* Fix cargo doc errors

* Add ctl README gen hook

* Use Cache impl for cache commands

* Use yarn classic

* Add undocumented hooks to README

* Add cache doc comments

* Initialize cache when creating transfer client

* Rename TransferClient to FileTransferClient

* Make cache module public

* Add file processors

* Update doc comment

* Add sanitized cache file path to prevent cache confusion attacks

* Inline format!()

* Remove commented out demo uninstall command

* Add type state pattern to Cache

* Remove Cache* prefixes

* Add CacheBuilder

* Disambiguate cache error

* Add try_into_cache method to CacheSettings

--- a/rust/stackable-cockpit/Cargo.toml
+++ b/rust/stackable-cockpit/Cargo.toml
@@ -12,6 +12,7 @@ openapi = ["dep:utoipa"]
 tokio = { workspace = true, features = ["process"] }
 utoipa = { workspace = true, optional = true }
 stackable-operator = { workspace = true }
+helm-sys = { path = "../helm-sys" }
 k8s-openapi = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
@@ -25,5 +26,5 @@ serde = { workspace = true }
 tera = { workspace = true }
 kube = { workspace = true }
 rand = { workspace = true }
+sha2 = { workspace = true }
 url = { workspace = true }
-helm-sys = { path = "../helm-sys" }
