--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,19 @@
 [workspace]
-members = [
-  "rust/*",
-  "web",
-  "."
-]
+members = ["rust/*", "web", "."]
 
 [workspace.package]
 version = "0.0.0-dev"
 
 [workspace.dependencies]
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.42.2" }
-kube = { version = "0.82.2", default-features = false, features = ["client", "openssl-tls"] }
-k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_26"] }
-tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
+kube = { version = "0.82.2", default-features = false, features = [
+  "client",
+  "openssl-tls",
+] }
+k8s-openapi = { version = "0.18.0", default-features = false, features = [
+  "v1_26",
+] }
+tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
 reqwest = { version = "0.11.16", features = ["native-tls"] }
 serde = { version = "1.0.160", features = ["derive"] }
 indexmap = { version = "1.9.3", features = ["serde"] }
@@ -34,6 +35,7 @@ axum = "0.6.18"
 snafu = "0.7.4"
 which = "4.4.0"
 tera = "1.18.1"
+sha2 = "0.10.7"
 rand = "0.8.5"
 phf = "0.11.1"
 url = "2.3.1"
