Basic translation support using Fluent

--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,8 @@
     "vitest": "^0.31.1"
   },
   "dependencies": {
+    "@fluent/bundle": "^0.18.0",
+    "@fluent/sequence": "^0.8.0",
     "@solidjs/router": "^0.8.2",
     "@unocss/reset": "^0.51.12",
     "feather-icons": "^4.29.0",
