--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-unicorn": "^47.0.0",
     "openapi-typescript": "^6.2.5",
     "prettier": "^2.8.8",
+    "sass": "^1.64.1",
     "typescript": "^5.0.2",
     "unocss": "^0.51.8",
     "vite": "^4.3.2",
