Detect language preferences from navigator.languages

--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@fluent/bundle": "^0.18.0",
+    "@fluent/langneg": "^0.7.0",
     "@fluent/sequence": "^0.8.0",
     "@solidjs/router": "^0.8.2",
     "@unocss/reset": "^0.51.12",
