--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "vitest": "^0.31.1"
   },
   "dependencies": {
+    "@solid-devtools/overlay": "^0.27.7",
     "@solidjs/router": "^0.8.2",
     "@unocss/reset": "^0.51.12",
     "feather-icons": "^4.29.0",
