--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -17,7 +17,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "jsx": "preserve",
-    "jsxImportSource": "solid-js"
+    "jsxImportSource": "solid-js",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "exclude": ["**/dist/**", "**/node_modules/**"]
 }
