fix: Fix helm-chart to deploy working installation

--- a/deploy/helm/stackable-cockpit/values.yaml
+++ b/deploy/helm/stackable-cockpit/values.yaml
@@ -54,6 +54,9 @@ tolerations: []
 
 affinity: {}
 
+service:
+  type: ClusterIP
+
 # CHANGE ME BEFORE DEPLOYING
 # default: admin:changeme
 htpasswd: |
