--- a/deploy/helm/stackable-cockpit/templates/deployment.yaml
+++ b/deploy/helm/stackable-cockpit/templates/deployment.yaml
@@ -34,6 +34,10 @@ spec:
           env:
             - name: STACKABLED_HTPASSWD_PATH
               value: /etc/stackable/{{ include "operator.appname" . }}/credentials/htpasswd
+            - name: STACKABLED_ADDRESS
+              value: 0.0.0.0 # We need to bind to the PodIP for the LoadBalancer to work
+            - name: STACKABLED_PORT
+              value: "8000"
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
