Basic translation support using Fluent (#73)
* Basic translation support using Fluent

* Add german translation by @Techassi

* Allow users to configure their preferred language

* Show human-friendly language names in the picker

* Detect language preferences from navigator.languages

* LanguageProvider no longer takes languages

* Fix eslint warnings

* Translate login page

* Reorganize FTLs

* Don't fail fatally for untranslated strings

* Update german translation

* Clean up l10n naming

* Spacing and more naming

* Docs

* Use === for nullish comparisons

* REALLY_MAKE_THE_CONSTS_SCREAM

--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,9 @@
     "vitest": "^0.31.1"
   },
   "dependencies": {
+    "@fluent/bundle": "^0.18.0",
+    "@fluent/langneg": "^0.7.0",
+    "@fluent/sequence": "^0.8.0",
     "@solid-devtools/overlay": "^0.27.7",
     "@solidjs/router": "^0.8.2",
     "@unocss/reset": "^0.51.12",
