--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,40 +3,48 @@ members = ["rust/*", "web", "."]
 
 [workspace.package]
 version = "0.0.0-dev"
+authors = ["Stackable GmbH <info@stackable.tech>"]
+license = "OSL-3.0"
+edition = "2021"
+repository = "https://github.com/stackabletech/stackable-cockpit/"
 
 [workspace.dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.42.2" }
-kube = { version = "0.82.2", default-features = false, features = [
-  "client",
-  "openssl-tls",
-] }
-k8s-openapi = { version = "0.18.0", default-features = false, features = [
-  "v1_26",
-] }
-tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
+async-trait = "0.1"
+axum = { version = "0.6", features = ["http2", "headers"] }
+bcrypt = "0.15"
+clap = { version = "4.2.1", features = ["derive", "env"] }
+clap_complete = "4.2"
+comfy-table = { version = "7.0", features = ["custom_styling"] }
+dotenvy = "0.15"
+futures = "0.3"
+gobuild = "0.1.0-alpha.1"
+indexmap = { version = "2.0", features = ["serde"] }
+k8s-openapi = { version = "0.19", default-features = false, features = ["v1_27"] }
+kube = { version = "0.85", default-features = false, features = ["client", "openssl-tls"] }
+lazy_static = "1.4"
+nu-ansi-term = "0.49"
+phf = "0.11"
+phf_codegen = "0.11"
+rand = "0.8"
 reqwest = { version = "0.11.16", features = ["native-tls"] }
-serde = { version = "1.0.160", features = ["derive"] }
-indexmap = { version = "1.9.3", features = ["serde"] }
-clap = { version = "4.2.1", features = ["derive"] }
-tracing-subscriber = "0.3.17"
-utoipa-swagger-ui = "3.1.3"
-clap_complete = "4.2.0"
-phf_codegen = "0.11.1"
-async-trait = "0.1.68"
-lazy_static = "1.4.0"
-serde_json = "1.0.96"
-serde_yaml = "0.9.21"
-dotenvy = "0.15.7"
-tracing = "0.1.37"
-semver = "1.0.17"
-bcrypt = "0.14.0"
-utoipa = "3.3.0"
-axum = "0.6.18"
-snafu = "0.7.4"
-which = "4.4.0"
-tera = "1.18.1"
-sha2 = "0.10.7"
-rand = "0.8.5"
-phf = "0.11.1"
-url = "2.3.1"
-xdg = "2.4.1"
+semver = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.9"
+sha2 = "0.10"
+snafu = "0.7"
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.46.0" }
+tera = "1.18"
+tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
+tower-http = "0.4"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+url = "2.3"
+utoipa = "3.3"
+utoipa-swagger-ui = {version = "3.1", features = ["axum"] }
+uuid = { version = "1.4.0", features = ["v4"] }
+which = "4.4"
+xdg = "2.4"
+
+[patch."https://github.com/stackabletech/operator-rs.git"]
+stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feat/sum-quotas" }
