--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,4 +47,6 @@ which = "4.4"
 xdg = "2.4"
 
 [patch."https://github.com/stackabletech/operator-rs.git"]
-stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feat/sum-quotas" }
+# TODO: Switch to released version
+# We did not want to draw a release of operator-rs just for https://github.com/stackabletech/operator-rs/pull/634
+stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", ref = "0e1a60e16151048f7abade3e9733ff196a2b7e4d" }
