feat: Implement KubeClient::get_cluster_info  (#90)
* refactor: Refactor kube.rs and move to utils

* feat: Implement KubeClient::get_cluster_info

* WIP. Filter to worker nodes is still missing

* Improve CLusterInfo

* Only count untainted nodes. Improve errror handling

* cleanup

* cleanup

* fix: docs

* Apply suggestions from code review

Co-authored-by: Techassi <git@techassi.dev>

* Update rust/stackable-cockpit/Cargo.toml

Co-authored-by: Techassi <git@techassi.dev>

* Update rust/helm-sys/Cargo.toml

Co-authored-by: Techassi <git@techassi.dev>

* Update rust/stackable-cockpit/src/platform/cluster.rs

Co-authored-by: Techassi <git@techassi.dev>

* improve docs

* bump op-rs

---------

Co-authored-by: Techassi <git@techassi.dev>

--- a/rust/helm-sys/Cargo.toml
+++ b/rust/helm-sys/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "helm-sys"
-version = "0.0.0-dev"
-edition = "2021"
+description = "Rust wrapper around Helm Go library"
+version.workspace = true
+authors.workspace = true
+license.workspace = true
+edition.workspace = true
+repository.workspace = true
 publish = false
+
 links = "helm"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [build-dependencies]
-gobuild = "0.1.0-alpha.1"
+gobuild.workspace = true
