Add very, very basic WebUI support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,8 @@ tower-http = "0.4"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 url = "2.3"
-utoipa = "3.3"
-utoipa-swagger-ui = {version = "3.1", features = ["axum"] }
+utoipa = { version = "3.3", features = ["indexmap"] }
+utoipa-swagger-ui = { version = "3.1", features = ["axum"] }
 uuid = { version = "1.4.0", features = ["v4"] }
 which = "4.4"
 xdg = "2.4"
