--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,13 @@ futures = "0.3"
 gobuild = "0.1.0-alpha.1"
 indexmap = { version = "2.0", features = ["serde"] }
 k8s-openapi = { version = "0.19", default-features = false, features = ["v1_27"] }
-kube = { version = "0.85", default-features = false, features = ["client", "openssl-tls"] }
+kube = { version = "0.85", default-features = false, features = ["client", "rustls-tls"] }
 lazy_static = "1.4"
 nu-ansi-term = "0.49"
 phf = "0.11"
 phf_codegen = "0.11"
 rand = "0.8"
-reqwest = { version = "0.11.16", features = ["native-tls"] }
+reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -49,4 +49,4 @@ xdg = "2.4"
 [patch."https://github.com/stackabletech/operator-rs.git"]
 # TODO: Switch to released version
 # We did not want to draw a release of operator-rs just for https://github.com/stackabletech/operator-rs/pull/634
-stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", ref = "0e1a60e16151048f7abade3e9733ff196a2b7e4d" }
+stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "rustls" }
