--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -355,8 +355,13 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
+          # Currently Widnows build fails with
+          # cargo:warning=# runtime/cgo
+          # cargo:warning=cgo: C compiler "C:\\Program" not found: exec: "C:\\Program": file does not exist
+          #   error occurred: Command "go" "build" "-buildmode" "c-archive" "-o" "D:\\a\\stackable-cockpit\\stackable-cockpit\\target\\debug\\build\\helm-sys-cce901864d7b6e8c\\out\\libgo-helm-wrapper.a" "go-helm-wrapper/main.go" with args "go-helm-wrapper" did not execute successfully (status code exit code: 1).
+          # so that Windows build is disabled for now
+          # - target: x86_64-pc-windows-gnu
+          #   os: windows-latest
           - target: x86_64-apple-darwin
             os: macos-latest
           - target: aarch64-apple-darwin
@@ -375,7 +380,7 @@ jobs:
       - uses: Swatinem/rust-cache@359a70e43a0bb8a13953b04a90f76428b4959bb6 # v2.2.0
         with:
           key: build-stackablectl-${{ matrix.target }}
-      -  run: cargo build -p stackablectl
+      - run: cargo build -p stackablectl
 
 # Commented out, as this was always failing.
 # We can comment it in again once want our image to be certified
