--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,4 +49,4 @@ xdg = "2.4"
 [patch."https://github.com/stackabletech/operator-rs.git"]
 # TODO: Switch to released version
 # We did not want to draw a release of operator-rs just for https://github.com/stackabletech/operator-rs/pull/634
-stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feat/display-memory" }
+stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", ref = "2416f89f2dc52dfb2f43da1f95998567b1069d84" }
