--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,4 +49,4 @@ xdg = "2.4"
 [patch."https://github.com/stackabletech/operator-rs.git"]
 # TODO: Switch to released version
 # We did not want to draw a release of operator-rs just for https://github.com/stackabletech/operator-rs/pull/634
-stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", ref = "f22ac39dc04991d701b566f8f0140700c3fe1771" }
+stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", tag = "0.47.0" }
