--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
 snafu = "0.7"
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.46.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.47.0" }
 tera = "1.18"
 tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
 tower-http = "0.4"
@@ -46,7 +46,5 @@ uuid = { version = "1.4.0", features = ["v4"] }
 which = "4.4"
 xdg = "2.4"
 
-[patch."https://github.com/stackabletech/operator-rs.git"]
-# TODO: Switch to released version
-# We did not want to draw a release of operator-rs just for https://github.com/stackabletech/operator-rs/pull/634
-stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", ref = "2416f89f2dc52dfb2f43da1f95998567b1069d84" }
+# [patch."https://github.com/stackabletech/operator-rs.git"]
+# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
