--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ nu-ansi-term = "0.49"
 phf = "0.11"
 phf_codegen = "0.11"
 rand = "0.8"
-reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
+# We use the feature "rustls-tls-native-roots" instead of "rustls-tls" to avoid pulling in "webpki-roots" and hence MPL-2.0: https://github.com/rustls/webpki-roots/blob/main/LICENSE
+reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-native-roots"] }
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
