--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -345,19 +345,57 @@ jobs:
       - id: printtag
         name: Output image name and tag
         run: echo "IMAGE_TAG=$(make -e print-docker-tag)" >> $GITHUB_OUTPUT
-  openshift_preflight:
-    name: Run the OpenShift Preflight check on the published images
-    needs:
-      - package_and_publish
-    runs-on: ubuntu-latest
-    env:
-      IMAGE_TAG: ${{ needs.package_and_publish.outputs.IMAGE_TAG }}
+
+  build_stackablectl:
+    name: Build stackablectl for ${{ matrix.target }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-latest
+          # Currently Widnows build fails with
+          # cargo:warning=# runtime/cgo
+          # cargo:warning=cgo: C compiler "C:\\Program" not found: exec: "C:\\Program": file does not exist
+          #   error occurred: Command "go" "build" "-buildmode" "c-archive" "-o" "D:\\a\\stackable-cockpit\\stackable-cockpit\\target\\debug\\build\\helm-sys-cce901864d7b6e8c\\out\\libgo-helm-wrapper.a" "go-helm-wrapper/main.go" with args "go-helm-wrapper" did not execute successfully (status code exit code: 1).
+          # so that Windows build is disabled for now
+          # - target: x86_64-pc-windows-gnu
+          #   os: windows-latest
+          - target: x86_64-apple-darwin
+            os: macos-latest
+          - target: aarch64-apple-darwin
+            os: macos-latest
     steps:
-      - name: Install preflight
-        run: |
-          wget https://github.com/redhat-openshift-ecosystem/openshift-preflight/releases/latest/download/preflight-linux-amd64
-          chmod +x preflight-linux-amd64
-      - name: Check container
-        run: ./preflight-linux-amd64 check container "$IMAGE_TAG" > preflight.out
-      - name: "Passed?"
-        run: '[ "$(./preflight-linux-amd64 check container "$IMAGE_TAG" | jq -r .passed)" == true ]'
+      - name: Checkout
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+        with:
+          submodules: recursive
+      - uses: dtolnay/rust-toolchain@0e66bd3e6b38ec0ad5312288c83e47c143e6b09e # v1
+        with:
+          toolchain: ${{ env.RUST_VERSION }}
+          targets: ${{ matrix.target }}
+      - uses: Swatinem/rust-cache@359a70e43a0bb8a13953b04a90f76428b4959bb6 # v2.2.0
+        with:
+          key: build-stackablectl-${{ matrix.target }}
+      - run: cargo build --target ${{ matrix.target }} -p stackablectl
+
+# Commented out, as this was always failing.
+# We can comment it in again once want our image to be certified
+#
+#   openshift_preflight:
+#     name: Run the OpenShift Preflight check on the published images
+#     needs:
+#       - package_and_publish
+#     runs-on: ubuntu-latest
+#     env:
+#       IMAGE_TAG: ${{ needs.package_and_publish.outputs.IMAGE_TAG }}
+#     steps:
+#       - name: Install preflight
+#         run: |
+#           wget https://github.com/redhat-openshift-ecosystem/openshift-preflight/releases/latest/download/preflight-linux-amd64
+#           chmod +x preflight-linux-amd64
+#       - name: Check container
+#         run: ./preflight-linux-amd64 check container "$IMAGE_TAG" > preflight.out
+#       - name: "Passed?"
+#         run: '[ "$(./preflight-linux-amd64 check container "$IMAGE_TAG" | jq -r .passed)" == true ]'
