try Windows build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -360,8 +360,8 @@ jobs:
           # cargo:warning=cgo: C compiler "C:\\Program" not found: exec: "C:\\Program": file does not exist
           #   error occurred: Command "go" "build" "-buildmode" "c-archive" "-o" "D:\\a\\stackable-cockpit\\stackable-cockpit\\target\\debug\\build\\helm-sys-cce901864d7b6e8c\\out\\libgo-helm-wrapper.a" "go-helm-wrapper/main.go" with args "go-helm-wrapper" did not execute successfully (status code exit code: 1).
           # so that Windows build is disabled for now
-          # - target: x86_64-pc-windows-gnu
-          #   os: windows-latest
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
           - target: x86_64-apple-darwin
             os: macos-latest
           - target: aarch64-apple-darwin
@@ -378,7 +378,22 @@ jobs:
       - uses: Swatinem/rust-cache@359a70e43a0bb8a13953b04a90f76428b4959bb6 # v2.2.0
         with:
           key: build-stackablectl-${{ matrix.target }}
-      - run: cargo build --target ${{ matrix.target }} -p stackablectl
+# Normal OS
+      - name: Build for non-Windows
+        if: matrix.os != 'windows-latest'
+        run: cargo build --target ${{ matrix.target }} -p stackablectl
+# Windows
+      - name: Prepare Windows env
+        if: matrix.os == 'windows-latest'
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: MINGW64
+          update: true
+          install: base-devel mingw-w64-x86_64-go mingw-w64-x86_64-rust
+      - name: Build for Windows
+        if: matrix.os == 'windows-latest'
+        run: cargo build --target ${{ matrix.target }} -p stackablectl
+        shell: msys2 {0}
 
 # Commented out, as this was always failing.
 # We can comment it in again once want our image to be certified
