--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -355,11 +355,6 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-          # Currently Widnows build fails with
-          # cargo:warning=# runtime/cgo
-          # cargo:warning=cgo: C compiler "C:\\Program" not found: exec: "C:\\Program": file does not exist
-          #   error occurred: Command "go" "build" "-buildmode" "c-archive" "-o" "D:\\a\\stackable-cockpit\\stackable-cockpit\\target\\debug\\build\\helm-sys-cce901864d7b6e8c\\out\\libgo-helm-wrapper.a" "go-helm-wrapper/main.go" with args "go-helm-wrapper" did not execute successfully (status code exit code: 1).
-          # so that Windows build is disabled for now
           - target: x86_64-pc-windows-gnu
             os: windows-latest
           - target: x86_64-apple-darwin
@@ -394,6 +389,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: cargo build --target ${{ matrix.target }} -p stackablectl
         shell: msys2 {0}
+# End of OS differences
 
 # Commented out, as this was always failing.
 # We can comment it in again once want our image to be certified
