--- a/.github/workflows/release_stackablectl.yaml
+++ b/.github/workflows/release_stackablectl.yaml
@@ -6,6 +6,15 @@ on:
     tags:
       - "stackablectl-[0-9]+.[0-9]+.[0-9]+"
 
+env:
+  RUST_VERSION: 1.70.0
+  CARGO_TERM_COLOR: always
+  CARGO_INCREMENTAL: "0"
+  CARGO_PROFILE_DEV_DEBUG: "0"
+  RUSTFLAGS: "-D warnings"
+  RUSTDOCFLAGS: "-D warnings"
+  RUST_LOG: "info"
+
 jobs:
   release:
     name: Release for ${{ matrix.target }}
