--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -14,6 +14,7 @@ stackable-cockpit = { path = "../stackable-cockpit", features = ["openapi"] }
 clap_complete.workspace = true
 clap.workspace = true
 comfy-table.workspace = true
+directories.workspace = true
 dotenvy.workspace = true
 indexmap.workspace = true
 lazy_static.workspace = true
@@ -27,4 +28,3 @@ snafu.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
-xdg.workspace = true
