--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -357,6 +357,8 @@ jobs:
             os: ubuntu-latest
           - target: x86_64-pc-windows-gnu
             os: windows-latest
+          - target: x86_64-pc-windows-msvc
+            os: windows-latest
           - target: x86_64-apple-darwin
             os: macos-latest
           - target: aarch64-apple-darwin
