diable windows build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -355,10 +355,11 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
+          # Commented out, as Windows build is currently not working
+          # - target: x86_64-pc-windows-gnu
+          #   os: windows-latest
+          # - target: x86_64-pc-windows-msvc
+          #   os: windows-latest
           - target: x86_64-apple-darwin
             os: macos-latest
           - target: aarch64-apple-darwin
@@ -386,14 +387,15 @@ jobs:
       #   with:
       #     msystem: MINGW64
       #     update: true
-      #     install: base-devel mingw-w64-x86_64-libressl mingw-w64-x86_64-ldns mingw-w64-x86_64-go mingw-w64-x86_64-rust
+      #     install: base-devel mingw-w64-x86_64-go mingw-w64-x86_64-rust
+      #     # install: base-devel mingw-w64-x86_64-libressl mingw-w64-x86_64-ldns mingw-w64-x86_64-go mingw-w64-x86_64-rust
       # - name: Build for Windows
       #   if: matrix.os == 'windows-latest'
       #   run: cargo build --target ${{ matrix.target }} -p stackablectl
       #   shell: msys2 {0}
-      - name: Build for Windows
-        if: matrix.os == 'windows-latest'
-        run: cargo build --target ${{ matrix.target }} -p stackablectl
+      # - name: Build for Windows
+      #   if: matrix.os == 'windows-latest'
+      #   run: cargo build --target ${{ matrix.target }} -p stackablectl
 # End of OS differences
 
 # Commented out, as this was always failing.
