--- a/.github/workflows/release_stackablectl.yaml
+++ b/.github/workflows/release_stackablectl.yaml
@@ -26,9 +26,10 @@ jobs:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-20.04 # We don't use ubuntu-latest because we want to build against an old glibc version. (18.04 has glibc 2.27, 20.04 has glibc 2.31, 22.04 has glibc 2.35)
             file-suffix: ""
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
-            file-suffix: ".exe"
+          # Commented out, as Windows build is currently not working
+          # - target: x86_64-pc-windows-gnu
+          #   os: windows-latest
+          #   file-suffix: ".exe"
           - target: x86_64-apple-darwin
             os: macos-latest
             file-suffix: ""
