--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -393,9 +393,9 @@ jobs:
       #   if: matrix.os == 'windows-latest'
       #   run: cargo build --target ${{ matrix.target }} -p stackablectl
       #   shell: msys2 {0}
-      # - name: Build for Windows
-      #   if: matrix.os == 'windows-latest'
-      #   run: cargo build --target ${{ matrix.target }} -p stackablectl
+      - name: Build for Windows
+        if: matrix.os == 'windows-latest'
+        run: cargo build --target ${{ matrix.target }} -p stackablectl
 # End of OS differences
 
 # Commented out, as this was always failing.
