Apply suggestions from code review
Co-authored-by: Techassi <git@techassi.dev>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,8 +55,8 @@ which = "4.4"
 [profile.release.package.stackablectl]
 # opt-level = "z" # We don't use that as the binary saving is not *that* big (think of 1MB) and it's not worth it risiking performance for this
 strip = true
-# Can not using because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
+# Cannot use because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
 # lto = true
 codegen-units = 1
-# Can not using because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
+# Cannot use because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
 # panic = "abort"
