--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,7 @@ nu-ansi-term = "0.49"
 phf = "0.11"
 phf_codegen = "0.11"
 rand = "0.8"
-# We use the feature "rustls-tls-native-roots" instead of "rustls-tls" to avoid pulling in "webpki-roots" and hence MPL-2.0: https://github.com/rustls/webpki-roots/blob/main/LICENSE
-reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-native-roots"] }
+reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -48,8 +47,6 @@ uuid = { version = "1.4.0", features = ["v4"] }
 which = "4.4"
 
 [patch."https://github.com/stackabletech/operator-rs.git"]
-# TODO: Switch to released version
-# We did not want to draw a release of operator-rs just for https://github.com/stackabletech/operator-rs/pull/634
 # stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
 
 [profile.release.package.stackablectl]
