--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ utoipa-swagger-ui = { version = "3.1", features = ["axum"] }
 uuid = { version = "1.4.0", features = ["v4"] }
 which = "4.4"
 
-[patch."https://github.com/stackabletech/operator-rs.git"]
+# [patch."https://github.com/stackabletech/operator-rs.git"]
 # stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
 
 [profile.release.package.stackablectl]
