--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -20,6 +20,7 @@ dotenvy.workspace = true
 indexmap.workspace = true
 lazy_static.workspace = true
 nu-ansi-term.workspace = true
+rand.workspace = true
 reqwest.workspace = true
 semver.workspace = true
 serde_json.workspace = true
