Update workflow files

--- a/.github/workflows/pr_cockpit-web.yaml
+++ b/.github/workflows/pr_cockpit-web.yaml
@@ -1,16 +1,11 @@
 ---
 name: web
 on:
-  push:
-    branches:
-      - main
-      - staging
-      - trying
-      - "renovate/**"
-    tags:
-      - '[0-9][0-9].[0-9]+.[0-9]+'
   pull_request:
-  merge_group:
+    paths:
+      - "package.json"
+      - "yarn.lock"
+      - "web"
 
 jobs:
   build-web:
